[tool.poetry]
name = "oauthclient"
version = "0.1.0"
description = ""
authors = ["alexander"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
requests = ">=2.21.0"
selenium = "^4.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
